# complete_collision_recorder

./: .gitignore  Complete Collision Recorder.sln  LICENSE.txt  README.md  Untitled.ipynb  pyproject.toml  setup.py
.ipynb_checkpoints/: README-checkpoint.md  dev-requirements-checkpoint.txt  requirements-checkpoint.txt  setup-checkpoint.py
complete_collision_recorder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: data_dictionary.md  process_flow.vsdx  system_design_and_functional_nonfunctional_requirements.md  system_design_and_infrastructure_requirements.md
docs/.ipynb_checkpoints/: system_design_and_infrastructure_requirements-checkpoint.md
models/: severity.pkl
notebooks/: analysis_compare_to_OSTATS.ipynb  cad_ids.csv  dev_20240909.ipynb  explore_training_df.ipynb  import_CAD_OH1_PDFs.ipynb  load_GCAT_model.ipynb  predictions_bikeCLE_model.ipynb  preprocessing.ipynb  score_GCAT.ipynb  score_bikeCLE_Gemini.ipynb  simple_af.ipynb  tokenized_text.csv  top_tokens.txt  train_GCAT_model.ipynb  train_GCAT_severity.ipynb  train_GCAT_src.ipynb  train_and_evaluate_bikeCLE_Gemini.ipynb  train_bikeCLE_Gemini.ipynb  train_bikeCLE_model.ipynb  train_bikeCLE_simple.ipynb
notebooks/data_ingestion/: Untitled.ipynb  dev_20240909.ipynb  dev_Read_Combine_Index_Files.ipynb  dev_data_ingestion.ipynb  dev_import_CAD_OH1_PDFs.ipynb  dev_import_all_oh1_pdfs.ipynb
notebooks/data_ingestion/.ipynb_checkpoints/: dev_data_ingestion-checkpoint.ipynb
notebooks/ingestion/: dev_Import_All_Index_Files.ipynb  dev_test_match_bounding_boxes.ipynb
notebooks/webapp/: index.html
src/: .~lock.file_sizes_filtered.csv#  __init__.py  complete_collision.py  file_sizes.py  main.py  utils.py
src/.ipynb_checkpoints/: complete_collision-checkpoint.py  import_all_oh1_pdfs-checkpoint.ipynb  main-checkpoint.py
src/complete_collision_recorder/: __main__.py  app.py  assemble_text.py  complete_collision.py  create_ssa_statistical_name_set.py  extract_and_ingest_text_from_cad_pdf.py  extract_and_ingest_text_from_oh1_pdf.py  score_and_describe_reports.py  utils.py
src/complete_collision_recorder/static/: script.js
src/complete_collision_recorder/templates/: index.html
webapp/: script.js  styles.css
