[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[complete_collision_recorder]
name = "complete_collision_recorder"
version = "0.2.0"
description = "Creates narratives of bike and pedestrian collisions from unstructured sources"
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.6"
license = { text = "Creative Commons Attribution 4.0 (CC BY SA 4.0)" }
authors = [
    { name = "Daniel Zielinski", email = "hip_dog_fur@runbox.com" }
]
homepage = "https://github.com/beardedDan/complete_collision_recorder"
keywords = ["NLP categorization", "NLP summarization", "Generative AI", "Car Accident", "Bicycle", "Bike", "Collision"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Creative Commons Attribution 4.0 (CC BY SA 4.0)",
    "Operating System :: OS Independent"
]

[complete_collision_recorder.dependencies]
numpy = ">=2.0.0"
pandas = ">=2.2.2"
datasets = ">=2.14.5"
torch = ">=2.0.1"
Transformers = ">=4.34.1"
nltk = ">=3.8.1"
pdf2image = ">=1.16.3"
pytesseract = ">=0.3.10"
scikit_learn = ">=1.5.2"
matplotlib = ">=3.9.2"
seaborn = ">=0.13.2"
accelerate = ">=0.26.0"
opencv-python = ">=4.10.0.84"
evaluate = ">=0.4.3"
imblearn = ">=0.12.4"
google-auth = ">=2.35.0"
google-generativeai = ">=0.8.3"
Flask = ">=3.0.3"


[complete_collision_recorder.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "black>=24.8",
    "flake8>=7.1.1",
    "ipykernel"
]

[complete_collision_recorder.scripts]
collision-recorder = "src.main:main"

[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | docs
    | logs

  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
force-exclude = '''
/LICENSE\.txt$|/README\.md$|/pyproject\.toml$
'''


[tool.flake8]
max-line-length = 79
exclude = '''
.git,
.venv,
build,
dist,
docs,
logs,
migrations,
*.txt,
*.md,
*.toml,
*.yaml,
LICENSE\.txt,
README\.md,
pyproject\.toml
'''
